# obs-Confetti

./: CMakeLists.txt  OBSconfetti.cpp
